@@ -219,9 +219,6 @@ void FetchRobberyReplayPage::makeActive( char inFresh ) {
     mWebRequest = startWebRequestSerial( "GET", 
                                    fullRequestURL, 
                                    NULL );
-    
-    printf( "Starting web request with URL %s\n", 
-            fullRequestURL );
 
     delete [] fullRequestURL;
     
